v5. added number formatting

--- a/v5/machines.html
+++ b/v5/machines.html
@@ -15,10 +15,14 @@
 		<div id="footer_div" data-visible="true" class=""></div>
 		<div id="options_div" data-visible="true" class="options"></div>
 		<div id="message_div" class="message_wrapper" data-visible="false"></div>
+
+		<table id="table" border="1"></table>
 	</body>
 </html>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.4/numeral.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/decimal.js/7.1.1/decimal.min.js"></script>
+<script src="https://cdn.rawgit.com/erosson/swarm-numberformat/v0.4.0/dist/swarm-numberformat.min.js"></script>
+
 <script type="text/javascript" src="../common/util.js"></script>
 <script type="text/javascript" src="../common/state.js"></script>
 <script type="text/javascript" src="js/timer.js"></script>
@@ -26,9 +30,7 @@
 
 <script type="text/javascript" src="js/const.js"></script>
 <script type="text/javascript" src="js/def.js"></script>
-
 <script type="text/javascript" src="js/events.js"></script>
-
 <script type="text/javascript" src="js/init.js"></script>
 
 
