--- a/v6/index.html
+++ b/v6/index.html
@@ -18,7 +18,7 @@
 		<div id="resource-container">
 			<div class="panel res" data-visible="true">
 			    Scrap: <span id="res-scrap">0</span><br/>
-			    <button class="build" id="gather-scrap">Gather</button>
+			    <button class="build" id="gather-scrap" robot="scrap">Gather</button>
 			</div>
 
 			<div class="panel res" data-visible="false">
