--- a/v6/index.html
+++ b/v6/index.html
@@ -16,9 +16,13 @@
 	<body>
 		<div id="resource-container" class="container"></div>
 
+		<div id="generator-container" class="container"></div>
+
 		<div id="robot-container" class="container"></div>
 
 		<div id="controls-container" class="container"></div>
+
+		<div id="admin-container" class="container panel"></div>
 	</body>
 </html>
 
