--- a/v6/index.html
+++ b/v6/index.html
@@ -23,7 +23,10 @@
 		<div id="controls-container" class="container"></div>
 
 		<div id="admin-container" class="container panel"></div>
+
+		<div id="foo">100</div>
 	</body>
+
 </html>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/decimal.js/7.1.1/decimal.min.js"></script>
